Se realizo la vista de visualizacion de datos en una tabla y algunos botones

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,20 +1,27 @@
 #Wed Nov 20 13:02:19 CST 2024
 excludes=
-file.reference.zip4j-2.11.5.jar=C:\\Users\\Samue\\Desktop\\zip4j-2.11.5.jar
+file.reference.aspose-cells-23.1.jar=C:\\Gestion\\lib\\lib\\aspose-cells-23.1.jar
+file.reference.javax.activation-1.2.0.jar=C:\\Gestion\\lib\\lib\\javax.activation-1.2.0.jar
+file.reference.javax.mail-1.6.2.jar=C:\\Gestion\\lib\\lib\\javax.mail-1.6.2.jar
+file.reference.zip4j-2.11.5.jar=C:\\Gestion\\lib\\lib\\zip4j-2.11.5.jar
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
-run.classpath=${javac.classpath}\:${build.classes.dir}
-file.reference.javax.mail-1.6.2.jar=C\:\\Users\\Samue\\Desktop\\javax.mail-1.6.2.jar
-javac.processorpath=${javac.classpath}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+javac.processorpath=\
+    ${javac.classpath}
 dist.javadoc.dir=${dist.dir}/javadoc
 jnlp.offline-allowed=false
 test.src.dir=test
 jnlp.signing.keystore=
 jnlp.signing.alias=
-run.modulepath=${javac.modulepath}\:${libs.JavaFX23.classpath}
+run.modulepath=\
+    ${javac.modulepath}:\
+    ${libs.JavaFX23.classpath}
 annotation.processing.enabled=true
 jnlp.codebase.type=no.codebase
 jar.index=${jnlp.enabled}
@@ -54,14 +61,15 @@ jlink.additionalmodules=
 javadoc.encoding=${source.encoding}
 javac.classpath=\
     ${libs.JavaFX23.classpath}:\
+    ${file.reference.aspose-cells-23.1.jar}:\
+    ${libs.ApachePOI.classpath}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail-1.6.2.jar}:\
-    ${libs.Apache_POI.classpath}:\
-    ${file.reference.aspose-cells-23.1.jar}:\
     ${file.reference.zip4j-2.11.5.jar}
 manifest.custom.permissions=
 mkdist.disabled=false
-run.test.modulepath=${javac.test.modulepath}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
 dist.jlink.dir=${dist.dir}/jlink
 dist.jar=${dist.dir}/DesarrolloAcademicoGestion.jar
@@ -69,7 +77,6 @@ build.classes.dir=${build.dir}/classes
 debug.test.modulepath=${run.test.modulepath}
 build.test.classes.dir=${build.dir}/test/classes
 javadoc.windowtitle=
-file.reference.javax.activation-1.2.0.jar=C\:\\Users\\Samue\\Desktop\\javax.activation-1.2.0.jar
 build.test.results.dir=${build.dir}/test/results
 jnlp.enabled=false
 dist.dir=dist
@@ -79,10 +86,10 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 build.generated.dir=${build.dir}/generated
 javadoc.version=false
 application.title=DesarrolloAcademicoGestion
-javac.test.modulepath=${javac.modulepath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
-file.reference.aspose-cells-23.1.jar=C\:\\Users\\Samue\\Desktop\\aspose-cells-23.1.jar
 javac.target=23
 jnlp.signing=
 platform.active=JDK_23
@@ -92,7 +99,9 @@ javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
 jnlp.descriptor=application
 meta.inf.dir=${src.dir}/META-INF
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 dist.jlink.output=${dist.jlink.dir}/DesarrolloAcademicoGestion
 annotation.processing.run.all.processors=true
 javac.modulepath=
