--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -85,7 +85,7 @@ javac.external.vm=true
 file.reference.aspose-cells-23.1.jar=C\:\\Users\\Samue\\Desktop\\aspose-cells-23.1.jar
 javac.target=23
 jnlp.signing=
-platform.active=JDK_23
+platform.active=default_platform
 manifest.file=manifest.mf
 manifest.custom.codebase=
 javadoc.html5=false
