--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 #Wed Nov 20 13:02:19 CST 2024
 excludes=
+file.reference.aspose-words-23.1.jar=C:\\Users\\Samue\\Desktop\\jar_files\\aspose-words-23.1.jar
 file.reference.junrar-7.5.5.jar=C:\\Users\\Samue\\Desktop\\junrar-7.5.5.jar
 file.reference.zip4j-2.11.5.jar=C:\\Users\\Samue\\Desktop\\zip4j-2.11.5.jar
 javac.test.classpath=\
@@ -60,7 +61,8 @@ javac.classpath=\
     ${libs.Apache_POI.classpath}:\
     ${file.reference.aspose-cells-23.1.jar}:\
     ${file.reference.zip4j-2.11.5.jar}:\
-    ${file.reference.junrar-7.5.5.jar}
+    ${file.reference.junrar-7.5.5.jar}:\
+    ${file.reference.aspose-words-23.1.jar}
 manifest.custom.permissions=
 mkdist.disabled=false
 run.test.modulepath=${javac.test.modulepath}
